module8/deploy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: module8
spec:
  containers:
    - name: module8
      image: uestczshen/httpserver:v1.0
      command:
        - ./httpserver
      livenessProbe:
        httpGet:
          path: /healthz
          port: 8080
          httpHeaders:
            - name: X-Uestczshen-Header
              value: YannZhu
        initialDelaySeconds: 10
        periodSeconds: 5
        timeoutSeconds: 2
      resources:
        limits:
          cpu: 2m
          memory: 200Mi
        requests:
          cpu: 1m
          memory: 100Mi
      lifecycle:
        preStop:
          httpGet:
          path: /prestop
          port: 8080
          httpHeaders:
            - name: X-Uestczshen-Header
              value: YannZhu
