module8/service.yaml
apiVersion: app/v1
kind: Service
metadata:
  name: httpserver-service
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: httpserver
  type: ClusterIP
