module8/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myingress
spec:
  rules:
  - host: www.foo.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          serviceName: httpserver
          servicePort: 8080
